@@ -8,6 +8,7 @@ import apiFetch from '@wordpress/api-fetch';
  * Internal dependencies
  */
 import WcPayUpeContext from './context';
+import wcpayTracks from '../../tracks';
 import { NAMESPACE } from '../../data/constants';
 import { useEnabledPaymentMethodIds } from '../../data';
 
@@ -30,6 +31,13 @@ const WcPayUpeContextProvider = ( { children, defaultIsUpeEnabled } ) => {
 			} )
 				.then( () => {
 					setIsUpeEnabled( Boolean( value ) );
+
+					// Track enabling/disabling UPE.
+					const event = Boolean( value )
+						? wcpayTracks.events.UPE_ENABLED
+						: wcpayTracks.events.UPE_DISABLED;
+					wcpayTracks.recordEvent( event );
+
 					// the backend already takes care of this,
 					// we're just duplicating the effort
 					// to ensure that the non-UPE payment methods are removed when the flag is disabled
